tests/compile_fail/ktstr_test_extra_sched_args_not_array.rs
use ktstr::ktstr_test;

#[ktstr_test(extra_sched_args = "not-an-array")]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
